tests/sksl/errors/DuplicateSymbolInSwitch.glsl
### Compilation failed:

error: 3: symbol 'x' was already defined
        case 1: int x, x;
                       ^
error: 3: symbol 'x' was already defined
        case 1: int x, x;
                       ^
2 errors
